--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,19 @@ jobs:
         run: |
           docker push 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest
 
+  deploy:
+     needs: build
+     runs-on: [self-hosted]
+     steps:
+        - name: docker pull image
+          run: docker pull 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest
+        - name: Image scan
+          run: trivy image 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest > trivyimagedeploy.txt
+        - name: Deploy to container
+          run: docker run -d --name swiggy-clone -p 3000:3000 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest
+
+
+
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
