--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -14,8 +14,8 @@ spec:
         app: swiggy
     spec:
       containers:
-      - name: swiggy
-        image: aakibkhan1212/swiggy-clone:latest
+      - name: swiggy-clone
+        image: 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest
         ports:
         - containerPort: 3000   # Use port 3000
 
