--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,17 @@ jobs:
           run: docker pull 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest
         - name: Image scan
           run: trivy image 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest > trivyimagedeploy.txt
+
+        - name: docker pull image
+          run: |
+            docker stop swiggy-clone || true
+            docker rm swiggy-clone || true
         - name: Deploy to container
           run: docker run -d --name swiggy-clone -p 3000:3000 790033385237.dkr.ecr.us-east-1.amazonaws.com/devops-ank-25:latest
-
+        - name: Update kubeconfig
+          run: aws eks --region us-east-1 update-kubeconfig --name EKS_CLOUD
+        - name: Deploy to kubernetes
+          run: kubectl apply -f deployment-service.yml --validate=false
 
 
       # If you wish to fail your job when the Quality Gate is red, uncomment the
